# browse

./: .gitignore  00_EXECUTION_GUIDE.md  01_PROJECT_OVERVIEW_AND_PHASE_1.md  02_PHASE_2_DATABASE_SETUP.md  03_PHASES_3-6_REFERENCE.md  ARCHITECTURE.md  Agent_browse.md  BRAINSTORMING.md  Browse_session_success.md  CLAUDE.md  COLOR_PALETTE_APPLIED.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  ISSUE_FIXES.md  OWL_AND_BROWSER_USE_STATUS.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md  PRODUCTION_DEPLOYMENT.md  PROJECT_SUMMARY.md  README.md  SUPABASE_AUTH_SETUP.md  TESTING_REPORT.md  VISION_FEEDBACK_LOOP_STATUS.md  debug_vnc.py  docker-compose.yml  package-lock.json  package.json
backend/: .coverage  .dockerignore  .env.example  Dockerfile  MIGRATION.md  SELF_HEALING_README.md  insert_trending_skills.py  package-lock.json  package.json  pyproject.toml  pytest.ini  run_community_migration.py  run_migration.py  test_ai_chat.sh  test_decomposition.py  test_e2e.js  test_self_healing.py  test_skills_api.py  test_websocket.js
backend/app/: main.py
backend/app/api/: api.py
backend/app/core/: config.py
backend/app/services/: agent_service.py  browser_container.py  cdp_stream_service.py  controller_service.py  tools.py  (+8 more)
backend/migrations/: add_trending_skills.sql  cached_plans.sql  community_skills.sql  create_mock_user.sql  error_patterns.sql  fix_rls_for_dev.sql  fix_skill_imports_rls.sql  fix_skills_rls.sql  session_templates.sql  task_decomposition.sql  user_credentials.sql  user_library.sql
backend/src/: index.ts
backend/tests/: test_owl_vision_live.py
(+161 files in other folders)
